--- a/style.css
+++ b/style.css
@@ -157,7 +157,8 @@ body{
     grid-template-columns: 1fr 1fr;
     width: 736px;
     background: var(white);
-    border-radius: 3.2rem 0 0 3.2rems;
+    border-radius: 3.2rem;
+
         
     }
 
@@ -196,11 +197,25 @@ body{
     }
 
     .resumo {
-        padding: 3.8rem 4rem;
+        padding: 3.2rem;
     }
     
     .resumo h2 {
         font-size: 2.4rem;
         margin-bottom: 3rem;
+    }
+
+    .resumo div{
+        font-size: 1.8rem;
+    }
+
+    .resumo button{
+        margin-top: 2.4rem;
+        
+    }
+
+    .resumo button:hover{
+        background: var(--resultado-bg);
+        cursor: pointer;
     }
 }
